fixed some alignment

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -449,8 +449,11 @@ footer{
     font-size: 14px;
   }
   #early-Access-section{
-    margin-top: 300px;
+    margin-top: 400px;
+    height: 400px;
+    margin-bottom: 100px;
   }
+  
   .early-container{
     /* height: 100%; */
     width: 100%;
@@ -460,7 +463,10 @@ footer{
     padding: 40px;
   }
   .upper-text h1{
-    font-size: 35px;
+    font-size: 29px;
+  }
+  .upper-text p{
+    font-size: 13px;
   }
   
   .upper-content{
